# zephyr-1

boards/st/nucleo_h7s3l8/: nucleo_h7s3l8.dts
boards/st/stm32f4_disco/: stm32f4_disco.dts
boards/st/stm32h7s78_dk/: Kconfig.defconfig  board.cmake  stm32h7s78_dk.dts
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.cs43l22  Kconfig.cs47l63  cs43l22.c  cs47l63.c  cs47l63.h  wm8904.c
drivers/display/: display_stm32_ltdc.c
drivers/flash/: Kconfig.stm32_xspi  flash_stm32_xspi.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.seesaw  gpio_seesaw.c  gpio_stmpe1600.c
drivers/i2s/: i2s_ll_stm32.c
drivers/input/: CMakeLists.txt  Kconfig  Kconfig.seesaw_keypad  input_seesaw_keypad.c
drivers/led/: CMakeLists.txt  Kconfig  Kconfig.seesaw_neopixel  seesaw_neopixel.c
drivers/memc/: memc_stm32_xspi_psram.c
drivers/mfd/: CMakeLists.txt  Kconfig  Kconfig.seesaw  mfd_seesaw.c
drivers/misc/: CMakeLists.txt  Kconfig
drivers/misc/adafruit_seesaw/: CMakeLists.txt  Kconfig  seesaw.c
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.seesaw  pwm_seesaw.c
drivers/sensor/vl53l0x/: vl53l0x.c
dts/bindings/audio/: cirrus,cs43l22.yaml
dts/bindings/gpio/: adafruit,seesaw-gpio.yaml
dts/bindings/input/: adafruit,seesaw-keypad.yaml
dts/bindings/led/: adafruit,seesaw-neopixel.yaml
lib/midi2/: CMakeLists.txt  Kconfig  ump_stream_responder.c  ump_stream_responder.h
samples/shields/neotrellis/: CMakeLists.txt  neotrellis.dts  prj.conf
samples/shields/neotrellis/src/: main.c
subsys/: CMakeLists.txt  Kconfig
subsys/midi2/: CMakeLists.txt  Kconfig  ump_stream_responder.c
(+65 files in other folders)
